package it.unibo.oop.hearthcode.model.player.api;

/**
 * A simple enum used to distinguish varoius drawing scenarios.
 */
public enum DrawCardResultType {

    DECK_EMPTY,

    CARD_ADDED,

    CARD_BURNED

}
